# dspy-opt

./: CONTRIBUTING.md  README.md  pyproject.toml
src/dspy_opt/: __init__.py  metrics.py  prompts.py
src/dspy_opt/freshqa/: __init__.py  evaluate_deepeval.py  freshqa_indexing.py  freshqa_indexing_config.yml  freshqa_rag_bootstrap_few_shot.py  freshqa_rag_bootstrap_few_shot_config.yml  freshqa_rag_copro.py  freshqa_rag_copro_config.yml  freshqa_rag_evaluation.py  freshqa_rag_evaluation_config.yml  freshqa_rag_mipro.py  freshqa_rag_mipro_config.yml  freshqa_rag_module.py  indexing.py  metadata_extractor.py  prompt_optimization.py  prompts.py  run_deepeval.py
src/dspy_opt/hotpotqa/: __init__.py  hotpotqa_indexing.py  hotpotqa_indexing_config.yml  hotpotqa_rag_bootstrap_few_shot.py  hotpotqa_rag_bootstrap_few_shot_config.yml  hotpotqa_rag_copro.py  hotpotqa_rag_copro_config.yml  hotpotqa_rag_evaluation.py  hotpotqa_rag_evaluation_config.yml  hotpotqa_rag_mipro.py  hotpotqa_rag_mipro_config.yml  hotpotqa_rag_module.py  indexing.py  indexing_config.yaml
src/dspy_opt/pubmedqa/: __init__.py  evaluate_deepeval.py  prompt_optimization.py  pubmed_config.yaml  pubmedqa_config.yaml  pubmedqa_indexing.py  pubmedqa_indexing_config.yml  pubmedqa_rag_bootstrap_few_shot.py  pubmedqa_rag_bootstrap_few_shot_config.yml  pubmedqa_rag_copro.py  pubmedqa_rag_copro_config.yml  pubmedqa_rag_evaluation.py  pubmedqa_rag_evaluation_config.yml  pubmedqa_rag_mipro.py  pubmedqa_rag_mipro_config.yml  pubmedqa_rag_module.py  retreiver_and_rag.py  run_evaluation.py  weaviate_schema.py  weaviate_schema_indexing.py
src/dspy_opt/triviaqa/: __init__.py  triviaqa_evaluate_deepeval.py  triviaqa_indexing.py  triviaqa_indexing_config.yml  triviaqa_prompt_optimization.py  triviaqa_rag_bootstrap_few_shot.py  triviaqa_rag_bootstrap_few_shot_config.yml  triviaqa_rag_copro.py  triviaqa_rag_copro_config.yml  triviaqa_rag_evaluation.py  triviaqa_rag_evaluation_config.yml  triviaqa_rag_mipro.py  triviaqa_rag_mipro_config.yml  triviaqa_rag_module.py  triviaqa_retriever_and_rag.py  triviaqa_run_evaluation.py  triviaqa_weaviate_schema.py
src/dspy_opt/utils/: __init__.py  metadata_extractor.py  metrics.py  query_rewriter.py  sub_query_generator.py  weaviate_retriever.py
src/dspy_opt/wikipedia/: __init__.py  wikipedia_evaluate_deepeval.py.py  wikipedia_indexing.py  wikipedia_indexing_config.yml  wikipedia_prompt_optimization.py.py  wikipedia_rag_bootstrap_few_shot.py  wikipedia_rag_bootstrap_few_shot_config.yml  wikipedia_rag_copro.py  wikipedia_rag_copro_config.yml  wikipedia_rag_evaluation.py  wikipedia_rag_evaluation_config.yml  wikipedia_rag_mipro.py  wikipedia_rag_mipro_config.yml  wikipedia_rag_module.py  wikipedia_retriever_and_rag.py.py  wikipedia_run_evaluation.py.py  wikipedia_weaviate_schema.py
